--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ blockquote:after{content:'\f10e';margin:0 0 0 10px}
 //<![CDATA[
 // Global variables with content. "Available for Edit"
 var monthFormat = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
-    noThumbnail = "../4.bp.blogspot.com/-O3EpVMWcoKw/WxY6-6I4--I/AAAAAAAAB2s/KzC0FqUQtkMdw7VzT6oOR_8vbZO6EJc-ACK4BGAYYCw/s1600/nth.png",
+    noThumbnail = "4.bp.blogspot.com/-O3EpVMWcoKw/WxY6-6I4--I/AAAAAAAAB2s/KzC0FqUQtkMdw7VzT6oOR_8vbZO6EJc-ACK4BGAYYCw/s1600/nth.png",
     postPerPage = 8,
     commentsSystem = "blogger",
     disqusShortname = "blueland";
@@ -485,7 +485,7 @@ Silent player
 <div class='widget-content'>
               <style type='text/css'>
               #intro-wrap{display:block}
-              #main-intro{background-image:url(../4.bp.blogspot.com/-AAmY8A2T2AY/W1QEyh-HvPI/AAAAAAAACes/BBtmUeC1MUY5NOW9PvZLGeNzNg75OAXEACK4BGAYYCw/s1600/pexels-photo-762528.jpeg)}
+              #main-intro{background-image:url(4.bp.blogspot.com/-AAmY8A2T2AY/W1QEyh-HvPI/AAAAAAAACes/BBtmUeC1MUY5NOW9PvZLGeNzNg75OAXEACK4BGAYYCw/s1600/pexels-photo-762528.jpeg)}
               </style>
               <div class='intro-content'>
 <h3 class='intro-title'>Hello, I am Blueland</h3>
@@ -514,7 +514,7 @@ Silent player
 <div class='widget-content'>
                 <style type='text/css'>
                 #intro-author-wrap{display:block}
-                #intro-author-photo .author-image{background-image:url(../1.bp.blogspot.com/-HD08cshV4J0/W3p0glgG3bI/AAAAAAAAAWg/g8veRtomnmEAJ6MzGTwQNF6-dqAamgVogCK4BGAYYCw/s1600/Fix.jpg)}
+                #intro-author-photo .author-image{background-image:url(1.bp.blogspot.com/-HD08cshV4J0/W3p0glgG3bI/AAAAAAAAAWg/g8veRtomnmEAJ6MzGTwQNF6-dqAamgVogCK4BGAYYCw/s1600/Fix.jpg)}
                 </style>
                 <div class='author-content'>
 <h3 class='author-title'>Something about me</h3>
@@ -639,7 +639,7 @@ MAU CURHAT ?
 </div>
 </div>
 <!-- Main Scripts -->
-<script src='../ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js' type='text/javascript'></script>
+<script src='ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js' type='text/javascript'></script>
 <!-- Theme Functions JS -->
 <script type='text/javascript'>
 //<![CDATA[
@@ -724,7 +724,7 @@ $(function () {
     });
     $('.avatar-image-container img').attr('src', function (_0xc76bxf, _0xc76bx4) {
         _0xc76bx4 = _0xc76bx4.replace('s35-c/index.html', 's45-c/index.html');
-        _0xc76bx4 = _0xc76bx4.replace('../img1.blogblog.com/img/blank.gif', '../4.bp.blogspot.com/-uCjYgVFIh70/VuOLn-mL7PI/AAAAAAAADUs/Kcu9wJbv790hIo83rI_s7lLW3zkLY01EA/s55-r/avatar.png');
+        _0xc76bx4 = _0xc76bx4.replace('img1.blogblog.com/img/blank.gif', '4.bp.blogspot.com/-uCjYgVFIh70/VuOLn-mL7PI/AAAAAAAADUs/Kcu9wJbv790hIo83rI_s7lLW3zkLY01EA/s55-r/avatar.png');
         return _0xc76bx4
     });
     $('.back-top').each(function () {
@@ -780,7 +780,7 @@ $(function () {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = '../connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
+  js.src = 'connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 //]]>
@@ -789,7 +789,7 @@ $(function () {
 <div class='overlay'></div>
 <div class='back-top' title='Back to Top'></div>
 
-<script type="text/javascript" src="../www.blogger.com/static/v1/widgets/4190539912-widgets.js"></script>
+<script type="text/javascript" src="www.blogger.com/static/v1/widgets/4190539912-widgets.js"></script>
 <script type='text/javascript'>
 window['__wavt'] = 'AOuZoY6ZKt3gOCj28z8sF6w_Jv0bG5fmmQ:1655400352262';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d4104991640752359070','index.html','4104991640752359070');
 _WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '4104991640752359070', 'title': 'Silent Player', 'url': 'https://bluelaned.blogspot.com/', 'canonicalUrl': 'https://bluelaned.blogspot.com/', 'homepageUrl': 'https://bluelaned.blogspot.com/', 'searchUrl': 'https://bluelaned.blogspot.com/search', 'canonicalHomepageUrl': 'https://bluelaned.blogspot.com/', 'blogspotFaviconUrl': 'https://bluelaned.blogspot.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': false, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'id', 'localeUnderscoreDelimited': 'id', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'isDynamicViewsAvailable': true, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Silent Player - Atom\x22 href\x3d\x22https://bluelaned.blogspot.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Silent Player - RSS\x22 href\x3d\x22https://bluelaned.blogspot.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Silent Player - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/4104991640752359070/posts/default\x22 /\x3e\n', 'meTag': '\x3clink rel\x3d\x22me\x22 href\x3d\x22https://www.blogger.com/profile/12325184553662024613\x22 /\x3e\n', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'adsenseAutoAds': false, 'boqCommentIframeForm': true, 'loginRedirectParam': '', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/344ab660b3875428', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'disableGComments': true, 'sharing': {'platforms': [{'name': 'Dapatkan link', 'key': 'link', 'shareMessage': 'Dapatkan link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Bagikan ke Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Bagikan ke Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Bagikan ke Pinterest', 'target': 'pinterest'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'disableGooglePlus': true, 'googlePlusShareButtonWidth': 0, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27id\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': true, 'jumpLinkMessage': 'Read more \xbb', 'pageType': 'index', 'pageName': '', 'pageTitle': 'Silent Player'}}, {'name': 'features', 'data': {'sharing_get_link_dialog': 'true', 'sharing_native': 'false'}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Tautan disalin ke papan klip!', 'ok': 'Oke', 'postLink': 'Tautan Pos'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Khusus', 'isResponsive': true, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Silent Player', 'description': '', 'url': 'https://bluelaned.blogspot.com/', 'type': 'feed', 'isSingleItem': false, 'isMultipleItems': true, 'isError': false, 'isPage': false, 'isPost': false, 'isHomepage': true, 'isArchive': false, 'isLabelSearch': false}}, {'name': 'widgets', 'data': [{'title': 'Default Variables', 'type': 'LinkList', 'sectionId': 'blueland-panel', 'id': 'LinkList71'}, {'title': 'Silent player', 'type': 'LinkList', 'sectionId': 'header-logo', 'id': 'LinkList3'}, {'title': 'Menu Widget', 'type': 'LinkList', 'sectionId': 'main-menu', 'id': 'LinkList74'}, {'title': 'Hello, I am Blueland', 'type': 'Image', 'sectionId': 'main-intro', 'id': 'Image1'}, {'title': 'Something about me', 'type': 'Image', 'sectionId': 'intro-author', 'id': 'Image2'}, {'title': 'Author Skills', 'type': 'LinkList', 'sectionId': 'intro-author', 'id': 'LinkList1'}, {'title': 'Contact Info', 'type': 'Text', 'sectionId': 'contact-left', 'id': 'Text3'}, {'title': 'Contact List', 'type': 'LinkList', 'sectionId': 'contact-left', 'id': 'LinkList2'}, {'title': 'MAU CURHAT ?', 'type': 'ContactForm', 'sectionId': 'contact-right', 'id': 'ContactForm1'}, {'title': 'Social Footer Widget', 'type': 'LinkList', 'sectionId': 'social-footer', 'id': 'LinkList76'}]}]);
