--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ Silent player
 <p class='intro-snippet'>Just Silent Player & Im Single :D</p>
 <div class='intro-action'>
                     <script type="text/javascript">
-                    var ilc = "https://youtu.be/d1YBv2mWll0/#Learn More",
+                    var ilc = "https://youtu.be/BoKQ6991WL8?si=-z5RcPRXXopwgY3a/#Learn More",
                     ima = ilc.split("#"),
                     ili = ima[0].trim(),
                     ilt = ima[1].trim(),
